# nvcam-system

./: .env  README.md  docker-compose.yml  run.md
auth/: Program.cs  auth-service.csproj
auth/Properties/: launchSettings.json
auth/Source/Controllers/: AuthController.cs  DefaultController.cs  UserController.cs
auth/Source/Dto/: UserSimplified.cs
auth/Source/Models/: User.cs
auth/Source/Services/: UserService.cs
auth/Source/Settings/: EnvSettings.cs  MongoDBSettings.cs
camera/: README.md  exec.sh
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.vue  index.css
client/src/components/: AutoResizingTextarea.vue  NavBar.vue
client/src/router/: index.ts
client/src/utils/: authUtils.ts  dashboardUtils.ts
client/src/views/: DashboardView.vue  LoginView.vue  RegisterView.vue
flag/system/: README.md
flag/system/window_client/: client.py
motor/: motor.py
sensor/: init.sh  sensor.py
system/: README.md  main.py  pyproject.toml
system/images/: clean_images.sh  count_images.sh  size_images.sh
system/video_stream_server/: server.py
utils/: .config_env  auto_config.sh  connect.sh  nvcam.conf  remote_run.sh  run_all.sh  scan.sh  scan_and_connect.sh  send_key.sh
utils/dev/: ignore_changes.sh  unignore_changes.sh
utils/old/: run_motor_and_camera.sh  scan.sh  scan_and_connect.sh
