[tool.poetry]
name = "system"
version = "0.1.0"
description = ""
authors = ["Karol Koś <kosiyyu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
